# educ_ai_kids

./: .gitignore  README.md  package-lock.json
backend/: .gitignore  README.md  env.example.txt  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  base.py  image_agent.py  music_agent.py  narration_agent.py  script_agent.py  supervisor.py  video_agent.py  voice_agent.py
backend/app/api/: __init__.py  routes.py
backend/app/graph/: __init__.py  workflow.py
backend/app/models/: __init__.py  requests.py  state.py
backend/app/tools/: __init__.py  image_generator.py  music_generator.py  video_animator.py  voice_generator.py
backend/app/utils/: __init__.py  video_assembler.py
docs/: MIGRATION_LOCAL.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/utiliser/: UtiliserContent.tsx  page.tsx
frontend/src/components/hestia/: HestiaChatbot.tsx
frontend/src/components/landing/: EcosystemSection.tsx  FeaturesSection.tsx  FinalCTA.tsx  HeroSection.tsx
frontend/src/components/layout/: AppShell.tsx  Icon.tsx  MobileNav.tsx  ProfileSidebar.tsx  SiteFooter.tsx  TopAppBar.tsx
frontend/src/components/utiliser/: UtiliserSidebar.tsx
frontend/src/components/video-generator/: GeneratorForm.tsx  ProgressDisplay.tsx  VideoGeneratorSection.tsx  VideoPlayer.tsx  index.ts
frontend/src/hooks/: useVideoGeneration.ts
frontend/src/lib/: api.ts
stitch-templates/: template-landing-page.html  template-service.html
