[project]
name = "educaikids-backend"
version = "1.0.0"
description = "Backend API pour EducAIKids - Génération automatique de vidéos éducatives animées"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "EducAIKids Team" }
]
keywords = ["education", "video", "ai", "children", "langgraph", "fastapi"]

dependencies = [
    # Framework API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    
    # LangGraph & LangChain
    "langgraph>=0.2.60",
    "langchain>=0.3.13",
    "langchain-core>=0.3.28",
    "langchain-openai>=0.2.14",
    
    # OpenRouter (via OpenAI compatible API)
    "openai>=1.58.0",
    
    # Replicate API
    "replicate>=1.0.4",
    
    # Montage Vidéo
    "moviepy>=2.1.0",
    
    # Async & HTTP
    "aiofiles>=24.1.0",
    "httpx>=0.28.0",
    
    # Utils
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    
    # Logging
    "structlog>=24.4.0",
]

[project.optional-dependencies]
# Dépendances pour les tâches asynchrones (production)
celery = [
    "celery>=5.4.0",
    "redis>=5.2.0",
]

# Base de données (optionnel)
db = [
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
]

# Développement
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

# Toutes les dépendances optionnelles
all = [
    "educaikids-backend[celery,db,dev]",
]

[project.scripts]
educaikids = "app.main:main"

[project.urls]
Homepage = "https://github.com/educaikids/educaikids"
Documentation = "https://github.com/educaikids/educaikids#readme"
Repository = "https://github.com/educaikids/educaikids"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Configuration uv
[tool.uv]
# Utiliser Python 3.12+ par défaut
python-preference = "managed"

# Configuration Ruff (linter/formatter)
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# Configuration MyPy
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

# Configuration Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

